--- a/JavaScript 1/MadLibs/myLibs.html
+++ b/JavaScript 1/MadLibs/myLibs.html
@@ -1,23 +1,20 @@
-<html lang="en">
+<html>
 <head>
-  <meta charset="utf-8">
   <style>
-		body {
-		  background: #623230;
-		  padding: 50px 0 0;
-		  font-family: Arial, Helvetica;
-		  font-size: 80%;
-		}
-		h1{
-		  margin-bottom: 8px;
-		  color: #127698;
-		}
-		p {
+	  	p {
 		  color: #218099;
 		  font-size: 1.4em;
 		  margin-bottom: 15px;
 		  line-height: 1.4;
 		}
+	  	body {
+		  background: #623230;
+		  padding: 50px 0 0;
+		}
+		h1{
+		  margin-bottom: 8px;
+		  color: #127698;
+		}	
 		.container {
 		  width: 100%;
 		  background: #eedd82;
